<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.movie.viewmodel.AuthViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E2E2E2"
        tools:context=".ui.auth.AuthActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#E2E2E2"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clipToPadding="false"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_app_logo" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_view_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/architect_your_app_with"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#465A61"
                        app:fontFamily="cursive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mvvm"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textColor="#969EEE"
                        android:textStyle="bold"
                        android:typeface="monospace"
                        app:fontFamily="casual" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout1"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:drawableStart="@drawable/ic_name"
                        android:drawablePadding="16dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:text="@={viewmodel.name}" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="16dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:text="@={viewmodel.email}" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:text="@={viewmodel.password}" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/edit_text_round_gray_background"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:text="@={viewmodel.passwordconfirm}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/forget_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimaryDark" />

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{viewmodel::onSignupButtonClick}"
                        android:text="@string/sign_up"
                        android:textAllCaps="false" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:onClick="@{viewmodel::onLogin}"
                    android:text="@string/already_have_an_account_nsign_in_here"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary" />

            </RelativeLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>